# fastapi-crud

backend/: alembic.ini  pyproject.toml
backend/app/: config.py  main.py  schema.py
backend/app/controller/: person.py
backend/app/model/: __init__.py  person.py
backend/app/repository/: person.py
backend/migrations/versions/: a3cb4e295e50_init_table.py
