[tool.poetry]
name = "app"
version = "0.1.0"
description = ""
authors = ["Ketov Daniil <ketov.daniil123@yandex.ru>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
fastapi = "^0.95.0"
uvicorn = "^0.21.1"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"


[tool.poetry.scripts]
start = "app.main:start"